# Agent-Orchestration-Platform-Assignment

./: AI_USAGE.md  DECISIONS.md  Dockerfile  README.md  docker-compose.yml
app/: .env.example  ARCHITECTURE.md  OBSERVABILITY.md  SECURITY.md  cli.py  config.yaml  llm_config.yml  main.py  pyproject.toml
app/evals/datasets/: analysis_agent.yaml  code_agent.yaml  cost_estimation.yaml  orchestration.yaml  research_agent.yaml  synthesis_judge.yaml  writing_agent.yaml
app/evals/judges/: analysis_judge.py  code_judge.py  cost_estimation_eval.py  orchestration_eval.py  research_judge.py  synthesis_judge_eval.py  writing_judge.py
app/evals/reports/: analysis_eval_2026-06-16_22-29-59.md  code_eval_2026-06-16_22-31-10.md  research_eval_2026-06-16_21-54-43.md  research_eval_2026-06-16_22-06-33.md  synthesis_judge_eval_2026-06-17_21-29-29.md  synthesis_judge_eval_2026-06-17_21-30-11.md  writing_eval_2026-06-16_21-32-31.md
app/src/api/: __init__.py  app.py  models.py
app/src/engine/: __init__.py  dispatch.py  evaluation.py  graph.py  monitor.py  nodes.py  planner.py  prompts.py  registry.py  runs.py  scheduler.py  synthesis_judge.py  synthesizer.py  validation.py
app/src/general_utils/: __init__.py  agent_base.py  caching.py  cost.py  llm.py  middleware.py  streaming.py  tokens.py  tools.py
app/src/schemas/: __init__.py  config.py  plan.py  run_state.py
app/src/services/: tavily_client.py
app/src/sub_agents/: _prompt_utils.py
app/src/sub_agents/analysis/: README.md  __init__.py  agent.py  prompts.py  schemas.py  tools.py
app/src/sub_agents/code/: README.md  (+7 more)
(+39 files in other folders)
