[project]
name = "agent-orchestration-platform"
version = "0.1.0"
description = "Agent orchestration platform: planner decomposes goals into a DAG, specialized agents execute, synthesizer combines results."
requires-python = ">=3.11"
dependencies = [
    "langchain>=1.2.10",
    "langchain-google-genai>=2.0.0",
    "langchain-groq>=0.2.0",
    "langgraph>=1.0.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "pyyaml>=6.0.0",
    "tavily-python>=0.5.0",
    "tenacity>=9.0.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "pymarkdownlnt>=0.9.38",
    "tree-sitter>=0.25.2",
    "tree-sitter-javascript>=0.25.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "ruff>=0.7.0",
    "mypy>=1.13.0",
    "types-pyyaml>=6.0.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
